[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/All/UI/Pause.gd" type="Script" id=1]
[ext_resource path="res://Assets/All/UI/Timer.gd" type="Script" id=2]
[ext_resource path="res://Assets/All/UI/Font Info.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/All/UI/Proj_Counter.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=36]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxLine" id=34]
color = Color( 0.462745, 0.462745, 0.501961, 1 )
thickness = 10
vertical = true

[sub_resource type="StyleBoxLine" id=33]
color = Color( 0.333333, 0.333333, 0.372549, 1 )
thickness = 10
vertical = true

[sub_resource type="StyleBoxFlat" id=32]
bg_color = Color( 0.133333, 0.133333, 0.152941, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxLine" id=35]
color = Color( 0.164706, 0.658824, 0.92549, 1 )
thickness = 10
vertical = true

[sub_resource type="StyleBoxFlat" id=29]
bg_color = Color( 0.333333, 0.333333, 0.372549, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 1, 0.698039, 0.458824, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=30]
bg_color = Color( 0.0196078, 0.0196078, 0.0196078, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.145098, 0.145098, 0.164706, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="HUD" type="CanvasLayer"]
layer = 2
follow_viewport_enable = true

[node name="Pause" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="Pause"]
self_modulate = Color( 1, 1, 1, 0.501961 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 36 )

[node name="Mouse Sense" type="HScrollBar" parent="Pause/Panel"]
anchor_left = 0.639063
anchor_top = 0.634722
anchor_right = 0.951563
anchor_bottom = 0.704167
rect_min_size = Vector2( 100, 0 )
custom_styles/grabber_highlight = SubResource( 34 )
custom_styles/grabber = SubResource( 33 )
custom_styles/scroll = SubResource( 32 )
custom_styles/grabber_pressed = SubResource( 35 )
max_value = 5.0
step = 0.01
value = 2.5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Sense Value" type="Label" parent="Pause/Panel"]
anchor_left = 0.739844
anchor_top = 0.547222
anchor_right = 0.836719
anchor_bottom = 0.645833
margin_top = 3.05176e-05
custom_fonts/font = ExtResource( 3 )
text = "2.5"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label4" type="Label" parent="Pause/Panel"]
anchor_left = 0.357812
anchor_top = 0.654167
anchor_right = 0.611719
anchor_bottom = 0.697222
margin_top = 3.05176e-05
custom_fonts/font = ExtResource( 3 )
text = "Mouse sensitivity: "
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Character" type="Label" parent="Pause/Panel"]
anchor_left = 0.0265625
anchor_top = 0.286111
anchor_right = 0.257813
anchor_bottom = 0.329167
margin_bottom = -1.52588e-05
custom_fonts/font = ExtResource( 3 )
text = "Select Character:"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Rocket Man" type="Button" parent="Pause/Panel"]
anchor_left = 0.0367187
anchor_top = 0.35
anchor_right = 0.203906
anchor_bottom = 0.443056
focus_mode = 0
custom_colors/font_color = Color( 0.92549, 0.478431, 0.164706, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 29 )
custom_styles/pressed = SubResource( 28 )
custom_styles/disabled = SubResource( 30 )
custom_styles/normal = SubResource( 26 )
enabled_focus_mode = 0
text = "Rocket Man"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Bomber Man" type="Button" parent="Pause/Panel"]
anchor_left = 0.0367187
anchor_top = 0.459722
anchor_right = 0.203906
anchor_bottom = 0.552778
focus_mode = 0
custom_colors/font_color = Color( 0.164706, 0.658824, 0.92549, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 29 )
custom_styles/pressed = SubResource( 28 )
custom_styles/disabled = SubResource( 30 )
custom_styles/normal = SubResource( 26 )
enabled_focus_mode = 0
text = "Bomber Man"
__meta__ = {
"_edit_use_anchors_": true,
"_editor_description_": ""
}

[node name="Quit" type="Button" parent="Pause/Panel"]
anchor_left = 0.0367187
anchor_top = 0.6125
anchor_right = 0.203906
anchor_bottom = 0.691667
rect_pivot_offset = Vector2( 107, 0 )
focus_mode = 0
custom_colors/font_color = Color( 0, 0.556863, 0.0823529, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 29 )
custom_styles/pressed = SubResource( 28 )
custom_styles/disabled = SubResource( 30 )
custom_styles/normal = SubResource( 26 )
enabled_focus_mode = 0
text = "exit"
__meta__ = {
"_edit_use_anchors_": true,
"_editor_description_": ""
}

[node name="Master Volume" type="HScrollBar" parent="Pause/Panel"]
anchor_left = 0.580469
anchor_top = 0.766667
anchor_right = 0.892969
anchor_bottom = 0.795833
rect_min_size = Vector2( 100, 0 )
rect_pivot_offset = Vector2( 5, -17 )
custom_styles/grabber_highlight = SubResource( 34 )
custom_styles/grabber = SubResource( 33 )
custom_styles/scroll = SubResource( 32 )
custom_styles/grabber_pressed = SubResource( 35 )
max_value = 1.0
step = 0.01
value = 0.5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Effects Volume" type="HScrollBar" parent="Pause/Panel"]
anchor_left = 0.580469
anchor_top = 0.845833
anchor_right = 0.892969
anchor_bottom = 0.875
rect_min_size = Vector2( 100, 0 )
rect_pivot_offset = Vector2( 5, -17 )
custom_styles/grabber_highlight = SubResource( 34 )
custom_styles/grabber = SubResource( 33 )
custom_styles/scroll = SubResource( 32 )
custom_styles/grabber_pressed = SubResource( 35 )
max_value = 1.0
step = 0.01
value = 0.5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Music2" type="HScrollBar" parent="Pause/Panel"]
anchor_left = 0.580469
anchor_top = 0.918056
anchor_right = 0.892969
anchor_bottom = 0.947222
rect_min_size = Vector2( 100, 0 )
rect_pivot_offset = Vector2( 5, -17 )
custom_styles/grabber_highlight = SubResource( 34 )
custom_styles/grabber = SubResource( 33 )
custom_styles/scroll = SubResource( 32 )
custom_styles/grabber_pressed = SubResource( 35 )
max_value = 1.0
step = 0.01
value = 0.5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Volume Percent" type="Label" parent="Pause/Panel"]
anchor_left = 0.890625
anchor_top = 0.725
anchor_right = 0.9875
anchor_bottom = 0.823611
rect_pivot_offset = Vector2( 62, 36 )
custom_fonts/font = ExtResource( 3 )
text = "50%"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Volume Percent2" type="Label" parent="Pause/Panel"]
anchor_left = 0.890625
anchor_top = 0.809722
anchor_right = 0.9875
anchor_bottom = 0.908333
rect_pivot_offset = Vector2( 62, 36 )
custom_fonts/font = ExtResource( 3 )
text = "50%"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Volume Percent3" type="Label" parent="Pause/Panel"]
anchor_left = 0.890625
anchor_top = 0.886111
anchor_right = 0.9875
anchor_bottom = 0.984722
rect_pivot_offset = Vector2( 62, 36 )
custom_fonts/font = ExtResource( 3 )
text = "50%"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Volume" type="Label" parent="Pause/Panel"]
anchor_left = 0.335156
anchor_top = 0.822222
anchor_right = 0.575
anchor_bottom = 0.920833
rect_pivot_offset = Vector2( -108, 117 )
custom_fonts/font = ExtResource( 3 )
text = "volume:"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Tip" type="Label" parent="Pause/Panel"]
self_modulate = Color( 1, 1, 1, 0.341176 )
anchor_left = 0.0078125
anchor_top = 0.763889
anchor_right = 0.35625
anchor_bottom = 0.984722
custom_fonts/font = ExtResource( 3 )
text = "Press the right
arrow key to 
reset the timer"
align = 1
valign = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Master" type="Label" parent="Pause/Panel"]
anchor_left = 0.615625
anchor_top = 0.727778
anchor_right = 0.855469
anchor_bottom = 0.770833
custom_fonts/font = ExtResource( 3 )
text = "Master"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Effects" type="Label" parent="Pause/Panel"]
anchor_left = 0.615625
anchor_top = 0.802778
anchor_right = 0.855469
anchor_bottom = 0.845833
custom_fonts/font = ExtResource( 3 )
text = "Effects"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Music" type="Label" parent="Pause/Panel"]
anchor_left = 0.615625
anchor_top = 0.880556
anchor_right = 0.855469
anchor_bottom = 0.923611
custom_fonts/font = ExtResource( 3 )
text = "Music"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Quit2" type="Button" parent="Pause/Panel"]
anchor_left = 0.365625
anchor_top = 0.756944
anchor_right = 0.55
anchor_bottom = 0.836111
rect_pivot_offset = Vector2( 107, 0 )
focus_mode = 0
custom_colors/font_color = Color( 0, 0.556863, 0.0823529, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 29 )
custom_styles/pressed = SubResource( 28 )
custom_styles/disabled = SubResource( 30 )
custom_styles/normal = SubResource( 26 )
enabled_focus_mode = 0
text = "Change song"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": true,
"_editor_description_": ""
}

[node name="Timer" type="Label" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Hello"
align = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Timer2" type="Timer" parent="Timer"]
pause_mode = 2
wait_time = 0.1
autostart = true

[node name="No" type="Label" parent="Timer"]
pause_mode = 2
anchor_left = 0.0109375
anchor_top = 0.0805556
anchor_right = 0.320313
anchor_bottom = 0.180556
custom_fonts/font = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Best Time" type="Label" parent="Timer"]
anchor_left = 0.009375
anchor_top = 0.0152778
anchor_right = 0.31875
anchor_bottom = 0.115278
custom_fonts/font = ExtResource( 3 )
text = "Time:"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Counter" type="Panel" parent="."]
pause_mode = 2
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 567, 441 )
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Proj_name" type="Label" parent="Counter"]
anchor_left = 0.228125
anchor_top = 0.0157407
anchor_right = 0.374219
anchor_bottom = 0.0712963
margin_right = -62.3333
margin_bottom = -13.3333
custom_fonts/font = ExtResource( 3 )
text = "Rockets:"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="No" type="Label" parent="Counter"]
anchor_left = 0.395312
anchor_top = 0.0157407
anchor_right = 0.409375
anchor_bottom = 0.0527778
custom_fonts/font = ExtResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="value_changed" from="Pause/Panel/Mouse Sense" to="Pause" method="_on_Mouse_Sense_value_changed"]
[connection signal="pressed" from="Pause/Panel/Rocket Man" to="Pause" method="_on_Rocket_Man_pressed"]
[connection signal="pressed" from="Pause/Panel/Bomber Man" to="Pause" method="_on_Bomber_Man_pressed"]
[connection signal="pressed" from="Pause/Panel/Quit" to="Pause" method="_on_Quit_pressed"]
[connection signal="value_changed" from="Pause/Panel/Master Volume" to="Pause" method="_on_HScrollBar_value_changed"]
[connection signal="value_changed" from="Pause/Panel/Effects Volume" to="Pause" method="_on_Volume_Scroll2_value_changed"]
[connection signal="value_changed" from="Pause/Panel/Music2" to="Pause" method="_on_Music2_value_changed"]
[connection signal="pressed" from="Pause/Panel/Quit2" to="Pause" method="_on_Quit2_pressed"]
[connection signal="timeout" from="Timer/Timer2" to="Timer" method="_on_Timer2_timeout"]
